feat: more broker docs

--- a/app/brokers/(1-concepts)/broker-affiliates/page.mdx
+++ b/app/brokers/(1-concepts)/broker-affiliates/page.mdx
@@ -1,6 +1,6 @@
 ---
 
-title: Affiliates
+title: Broker Affiliates
 
 description: Affiliates is a feature which allows brokers to share commission.
 
