--- a/app/lp/(2-guides)/how-to-provide-liquidity/page.mdx
+++ b/app/lp/(2-guides)/how-to-provide-liquidity/page.mdx
@@ -6,14 +6,55 @@ description: Users providing liquidity in the Chainflip JIT AMM follow a process
 
 ---
 
+import {Steps} from "nextra/components";
 
-# How to Provide Liquidity
+
+## How to Provide Liquidity
 
 Users providing liquidity in the Chainflip JIT AMM follow a process similar to a centralized exchange flow.
 
-1. **Creating a Liquidity Provider Account**: Liquidity providers need an account on the Chainflip State Chain. This account is needed so their assets and orders can be associated to them. The **State Chain Gateway** can be used to create and fund an account with a nominal amount of $FLIP to cover the gas fees of operations such as creating orders.
-2. **Depositing Assets to a Liquidity Account**: Liquidity Providers nominate the assets they wish to deposit. To do so they will also need to specify a refund address, which may be used to send back the LPs deposits, so the protocol can correct the  security ratio. Once that is done, they then can request a **Deposit Channel** for each asset they wish to deposit, and send funds to that **Deposit Channel Address**. Those transactions will then be witnessed by validators which will cause their account balance to be credited on the State Chain. The Deposit Channel closes after 24 hours, and users should open a new one for each deposit.
-3. **Managing Liquidity Positions**: To create orders in the JIT AMM, Liquidity Providers must have a large enough State Chain free balance in the associated assets. We support two types of order:
-- Range orders, which are similiar to Uniswap v3's.
-- Limit orders, which are maker-only, requiring a normal swap, and filled orders are automatically closed with swapped funds returned to the virtual free balance.
-4. **Withdrawing Assets from a Liquidity Account**: When Liquidity Providers request asset withdrawals they must specify a destination address to which the withdrawal funds will be sent. The Authority Set will then deduct gas fees, create a transaction that will deposit the requested funds into the specified address, broadcast it on the relevant external chain, witnesses the transaction and record it as settled.
+<Steps>
+    ### Creating a Liquidity Provider Account:
+    Liquidity providers need an account on the Chainflip State Chain. This account is needed so their assets and orders can be associated to them. The **State Chain Gateway** can be used to create and fund an account with a nominal amount of $FLIP to cover the gas fees of operations such as creating orders.
+
+    ### Depositing Assets to a Liquidity Account:
+    Liquidity Providers nominate the assets they wish to deposit. To do so they will also need to specify a refund address, which may be used to send back the LPs deposits, so the protocol can correct the  security ratio. Once that is done, they then can request a **Deposit Channel** for each asset they wish to deposit, and send funds to that **Deposit Channel Address**. Those transactions will then be witnessed by validators which will cause their account balance to be credited on the State Chain. The Deposit Channel closes after 24 hours, and users should open a new one for each deposit.
+
+    ### Managing Liquidity Positions:
+    To create orders in the JIT AMM, Liquidity Providers must have a large enough State Chain free balance in the associated assets. We support two types of order:
+    * Range orders, which are similiar to Uniswap v3's.
+    * Limit orders, which are maker-only, requiring a normal swap, and filled orders are automatically closed with swapped funds returned to the virtual free balance.
+
+    ### Withdrawing Assets from a Liquidity Account:
+    When Liquidity Providers request asset withdrawals they must specify a destination address to which the withdrawal funds will be sent. The Authority Set will then deduct gas fees, create a transaction that will deposit the requested funds into the specified address, broadcast it on the relevant external chain, witnesses the transaction and record it as settled.
+
+</Steps>
+
+## Creating a Liquidity Provider Account
+
+Liquidity providers need to have an on-chain account for the Chainflip State Chain and refund addresses ready for each asset. To achieve this, they will need to use the [State Chain Flip Gateway](../validator-network/state-chain-flip-gateway.mdx) and fund their account with a nominal amount of FLIP. This FLIP is used to pay the minimal gas fees required to place and update orders.
+
+Liquidity Provider accounts can be managed through the `chainflip-cli`, Polkadot.js wallet, or through the Pools web interface.
+
+## Depositing Assets to a Liquidity Account
+
+To open any position, first Liquidity Providers must[ Ingress](../validator-network/ingress-witnessing-deposits.md) their assets into the system.
+
+1. Firstly, Liquidity Providers must nominate the assets they wish to deposit. They submit an `activate_asset` extrinsic to the State Chain, which includes the asset type and a refund address in case their collateral must be returned to them due to the [Security Ratio](../components/governance-and-security.md#security-ratio). This then opens a [Deposit Channel](deposit-channels-and-brokers.md#desposit-channels) to which the LP can send their asset (BTC, USDC, etc)
+2. The Liquidity provider then sends funds using any wallet to each Deposit Channel Address. The transactions are in turn [witnessed](../validator-network/ingress-witnessing-deposits.md#witnessing) by the Validators, resulting in the credit of balances for each asset on the State Chain.
+3. The Deposit Channel closes after 24 hours. Users should **always open a new Deposit Channel** and send their deposit **immediately** every time they make a liquidity deposit.
+
+## Managing Liquidity Positions
+
+To create a range order or limit order in the [JIT AMM](just-in-time-amm-protocol.md), Liquidity providers need to have deposited enough assets to open the position from their virtual balance on the State Chain.
+
+- Liquidity providers can open a Range Order on any given pair by submitting a simple extrinsic using their State Chain account. The parameters for range orders are similar to that of Uniswap v3. These positions can also be closed or updated using an additional extrinsic.
+- Limit orders can also be placed using a separate extrinsic. Limit orders are maker-only, meaning that Liquidity Providers can not trade against other limit orders directly, and instead must conduct a normal swap. Filled limit orders are automatically closed, and the swapped funds return to the Liquidity Provider Account as a free virtual balance. Unfilled orders can be cancelled using another extrinsic.
+
+## Withdrawing Collateral from a Liquidity Account
+
+Not only is the ability to withdraw liquidity essential but it is expected to be fairly frequent in the [JIT AMM](just-in-time-amm-protocol.md). Liquidity Providers will often have to rebalance their asset float across the markets in which they operate to maintain a balanced and effective market-making strategy.
+
+1. Providers submit an extrinsic to the State Chain which requests that the network send the specified amount of assets to their refund address, which would have been specified when the account was created. Refund addresses can also be updated without creating a new account. This instruction becomes a [Pending Egress Transaction](../validator-network/egress-broadcasting-funds.md).
+2. The Authority Set commences a Signing Ceremony to create a valid transaction to send funds from the relevant Vault to the Liquidity Provider, deducting the gas fee required from the balance owed to the user. The signed transaction is broadcast to the relevant external chain by a nominated validator, and the user receives their funds less the gas fee.
+3. The Authority Set witnesses the egress transaction and records the transaction as settled in the accounting layer.
