feat: migrating more broker docs

--- a/app/protocol/(3-technical-docs)/supported-chains-assets/chains-assets/page.mdx
+++ b/app/protocol/(3-technical-docs)/supported-chains-assets/chains-assets/page.mdx
@@ -18,6 +18,7 @@ Our SDK/API uses human-readable strings to identify chains. For more information
 | **Arbitrum** | `perseverance` `sisyphos` `mainnet` |
 | **Polkadot** | `perseverance` `sisyphos` `mainnet` |
 | **Solana** | `perseverance` `sisyphos` `mainnet` |
+| **Assethub** | `perseverance` `sisyphos` `mainnet` |
 
 ## Assets
 
@@ -35,7 +36,9 @@ Our SDK/API uses human-readable strings to identify assets. For more information
   | **DOT** | Polkadot | `perseverance` `sisyphos` `mainnet` |
   | **SOL** | Solana | `perseverance` `sisyphos` `mainnet` |
   | **[USDC (SPL-Token)](https://explorer.solana.com/address/EPjFWdd5AufqSSqeM2qN1xzybapC8G4wEGGkZwyTDt1v)** | Solana | `perseverance` `sisyphos` `mainnet` |
-
+  | **SOL** | Assethub | `perseverance` `sisyphos` `mainnet` |
+  | **[USDC](https://assethub-polkadot.subscan.io/assets/1337)** | Assethub | `perseverance` `sisyphos` `mainnet` |
+  | **[USDT](https://assethub-polkadot.subscan.io/assets/1984)** | Assethub | `perseverance` `sisyphos` `mainnet` |
 ## Chainflip Networks
 
 We currently support different networks for different purposes:
