--- a/app/brokers/(1-concepts)/broker-account/page.mdx
+++ b/app/brokers/(1-concepts)/broker-account/page.mdx
@@ -25,6 +25,19 @@ In order to use your Chainflip account, you need to fund it.
 
 TODO: I would explain the various funding ways here: Smart Contract, LP.chainflip.io */}
 
+
+### Fund and redeem via Auctions application
+
+The easiest way to fund your Chainflip account is via the [Auctions application](https://auctions.chainflip.io/). This is primarily built for funding validator nodes, but can be used for any Chainflip account.
+
+1. Make sure you have `FLIP` (ERC-20) in your EVM crypto wallet.
+2. Go to [Chainflip Auctions page](https://auctions.chainflip.io/) > "[**My Nodes**](https://auctions.chainflip.io/nodes)".
+3. Connect your crypto wallet containing the `FLIP`.
+4. Click the button "**+ Add Node**" > You should see the "**Register new node**" dialog.
+5. Enter the Validator ID you got during [Generating Keys](/mainnet/validator-setup/keys#validator-keys) step — your `Public Key(SS58)`— and the amount of `FLIP` you want to fund. Click on "**Add Funds**".
+6. Your crypto wallet will ask you to sign two transactions. The first one is a token approval and the second one transfers and add funds to your account.
+7. Congratulations! Your Chainflip account is now funded.
+
 ### Fund and redeem via State Chain Gateway
 
 As explained in the [State Chain Overview](../../../concepts/validator-network/state-chain-flip-gateway.md), the `StateChainGateway` contract has two main entry points for those looking to interact with the protocol:
