--- a/app/lp/(2-guides)/how-to-register-as-lp/page.mdx
+++ b/app/lp/(2-guides)/how-to-register-as-lp/page.mdx
@@ -2,7 +2,7 @@
 
 title: How to register as LP
 
-description: guide on how How to register as Liquidity Provider
+description: guide on How to register as Liquidity Provider
 
 ---
 
@@ -12,7 +12,7 @@ Also known as **LPs**, the Liquidity Provider role is usually fulfilled by profe
 
 If you want to market-make on Chainflip, **register** as an LP. You can do this using 2 method:
 
-### Register using `chainflip-cli`
+### Register using [`chainflip-cli`](/protocol/chainflip-cli)
 
 ```bash copy
 chainflip-cli lp register
@@ -21,7 +21,7 @@ chainflip-cli lp register
 Once registered, the account will have full access to LP-related actions through the [LP API](/lp/lp-api).
 
 
-### Deregister using `chainflip-cli`
+### Deregister using [`chainflip-cli`](/protocol/chainflip-cli)
 
 In order to be able to redeem all remaining FLIP, LP accounts must **deregister**. A pre-requisite for deregistering, LPs must not have any open orders and must withdraw all funds from their free balance. Once this is done, the LP API can be switched off and the account deregistered via the CLI:
 
