--- a/app/lp/(1-concepts)/trading-strategies/page.mdx
+++ b/app/lp/(1-concepts)/trading-strategies/page.mdx
@@ -8,7 +8,7 @@ description: Automated trading strategies overview
 
 import { Callout } from "nextra/components";
 
-# Automated Trading Strategies
+## Automated Trading Strategies
 
 <Callout type="info">
 This feature is available from version 1.9 onwards.
