--- a/app/brokers/page.mdx
+++ b/app/brokers/page.mdx
@@ -16,7 +16,7 @@ Brokers forward users' swap requests to the network, paying transaction fees on 
 
 ## Brokers
 
-Any [State Chain account](../validator-network/state-chain-flip-gateway.md) can play the role of a Broker. Their role is to construct and submit Deposit Channel Requests extrinsics to the blockchain for themselves, but mostly on behalf of end users. This role is essential in enabling the Chainflip protocol’s default user experience: without an access point to submit a transaction to the state chain, users would have to be forced to include complex transaction metadata in their swap deposits to vaults. This would increase gas fees for users and would also necessitate the use of specialized wallets and a myriad of SDK integrations to overcome this issue.
+Any [State Chain account](/protocol/protocol-overview#the-state-chain) can play the role of a Broker. Their role is to construct and submit Deposit Channel Requests extrinsics to the blockchain for themselves, but mostly on behalf of end users. This role is essential in enabling the Chainflip protocol’s default user experience: without an access point to submit a transaction to the state chain, users would have to be forced to include complex transaction metadata in their swap deposits to vaults. This would increase gas fees for users and would also necessitate the use of specialized wallets and a myriad of SDK integrations to overcome this issue.
 
 A Broker should offer an endpoint that takes an input of swap intent information and returns the extrinsic hash once the Broker has opened a Deposit Channel on the State Chain for the user. From there, the Deposit Channel can be verified through any secondary source before a deposit to the resulting Deposit Channel Address is made.
 
@@ -26,18 +26,18 @@ This places the burden of spam prevention on the Broker. If their endpoint is ab
 
 ### Vault Swaps
 
-Deposit Channels can be bypassed through Vault swaps. This process requires the user to send funds directly to the Vault’s primary wallet or call a Vault contract's swap function, but must include all of the required swap information, such as Destination Address and Destination Chain, in the deposit transaction on the external chain. Upon [witnessing](../validator-network/ingress-witnessing-deposits.md#witnessing) this direct transfer, Validators will parse the metadata and immediately include the trade in the swap queue.
+Deposit Channels can be bypassed through Vault swaps. This process requires the user to send funds directly to the Vault’s primary wallet or call a Vault contract's swap function, but must include all of the required swap information, such as Destination Address and Destination Chain, in the deposit transaction on the external chain. Upon [witnessing](/protocol/ingress-witnessing-deposits) this direct transfer, Validators will parse the metadata and immediately include the trade in the swap queue.
 
 This method could be used by application developers who want to avoid the time needed for a call-and-response from the State Chain, and instead trigger the swap directly.
 
-There are trade-offs in using Vault swaps depending on the source chain. For instance, on Ethereum, using a Deposit Channel is more gas-efficient (and therefore cheaper) than a Vault swap. On the other hand, deposit channels require interaction with the State Chain through a [Broker API](../../swapping/integrations/running-a-broker/broker-api.mdx).
+There are trade-offs in using Vault swaps depending on the source chain. For instance, on Ethereum, using a Deposit Channel is more gas-efficient (and therefore cheaper) than a Vault swap. On the other hand, deposit channels require interaction with the State Chain through a [Broker API](/brokers/broker-api).
 
 ### Broker Fees
 
 This design then raises the question: why would anyone run a Broker if they have to pay for third parties to use it, especially when those third parties may be malicious?
 
 The answer lies in Broker Fees. Broker operators can choose to charge a fee for the use of their endpoint, and can be set at any value from 0 basis point to 1000 basis points.
-When set to more than zero, the network will charge an additional fee which, like the [network fee](../token-economics/incentive-design-emission-and-burning#the-network-fee), is deducted from the USDC amount of every successful swap and credited to the broker's account.
+When set to more than zero, the network will charge an additional fee which, like the [network fee](/protocol/token-economics/incentive-design-emission-and-burning#the-network-fee), is deducted from the USDC amount of every successful swap and credited to the broker's account.
 
 This way, anyone wishing to integrate Chainflip into their wallet, web interface, or other Web3 products can benefit from getting their users trading on the protocol. The better the balance Broker operators can strike between attracting users and managing Deposit Channel Request transaction fees, the more profits they can expect to make.
 
@@ -55,10 +55,10 @@ If you are a developer of wallets, aggregators or DEXes, you can earn revenue by
 To integrate Chainflip swapping, you can integrate via:
 
 <Cards num={2}>
-    <Cards.Card arrow title="Deposit Channels Swaps" href="brokers/deposit-channels-swaps">
+    <Cards.Card arrow title="Deposit Channels Swaps" href="brokers/broker-deposit-channels-swaps">
         <>![Documentation theme screenshot](/assets/docs-theme.png)</>
     </Cards.Card>
-    <Cards.Card arrow title="Vault Swaps" href="brokers/vault-swaps">
+    <Cards.Card arrow title="Vault Swaps" href="brokers/broker-vault-swaps">
         <>![Blog theme screenshot](/assets/blog-theme.png)</>
     </Cards.Card>
 </Cards>
