fix: broken links fixes

--- a/app/protocol/(3-technical-docs)/token-economics/incentive-design-emission-and-burning/page.mdx
+++ b/app/protocol/(3-technical-docs)/token-economics/incentive-design-emission-and-burning/page.mdx
@@ -30,34 +30,16 @@ Chainflip has globally limited emissions caps based on an annual target rate. In
 
 The emission targets are distributed among the following recipients:
 
-{<table data-header-hidden>
-
-  <thead>
-    <tr>
-      <th width="207">Recipient</th>
-      <th width="127">Target Rate</th>
-      <th width="135">Distribution</th>
-    </tr>
-  </thead>
-  <tbody>
-    <tr>
-      <td>Authority Validators</td>
-      <td>4.5% annual</td>
-      <td>Equal Shares</td>
-    </tr>
-    <tr>
-      <td>Backup Validators</td>
-      <td>0.5% annual</td>
-      <td>Pro-Rata</td>
-    </tr>
-  </tbody>
-</table>}
+|Recipient| Target Rate      | Distribution |
+|----------|--------------------|----------------|
+|Authority Validators   | 4.5% annual | Equal Shares |
+|Backup Validators | 0.5% annual | Pro-Rata |
 
 Note: Emission rates were at 7% and 1% respectively until 22nd May, 2024. 
 
 ### Estimated Yields and Lockup Ratio for Validators
 
-Due to the cap of 150 Authority Validators imposed upon the protocol due to [FROST signature scheme](frost-signature-scheme.md "mention") scalability limitations, the [Validator, Auctions, Bond and Rewards](../validator-network/validator-auctions-bonds-and-rewards.md "mention") will determine the amount required to bid through market dynamics every few days.
+Due to the cap of 150 Authority Validators imposed upon the protocol due to [FROST signature scheme](/protocol/frost-signature-scheme) scalability limitations, the [Validator, Auctions, Bond and Rewards](/validators/validator-auctions-bonds-and-rewards) will determine the amount required to bid through market dynamics every few days.
 
 Because the number of tokens being given to Validators as rewards is not dependent on the amount staked, the actual yield validators receive will be determined by competition in the auction market. We can predict the total staking equilibrium based on the performance of other protocols and their staking systems.
 
