--- a/app/brokers/(3-techincal-docs)/javascript-sdk/functions/page.mdx
+++ b/app/brokers/(3-techincal-docs)/javascript-sdk/functions/page.mdx
@@ -326,7 +326,7 @@ type BoostedQuoteDetails = {
 <Callout type="info">
     The intermediate amount is the value of the first swap _leg_. In this case, BTC > ETH requires both BTC/USDC and USDC/ETH pools (or legs).
 
-    Learn more about Chainflip's [$USDC Denominated Pools](../../../concepts/swaps-amm/usdusdc-denominated-pools).
+    Learn more about Chainflip's [$USDC Denominated Pools](/protocol/usdusdc-denominated-pools).
 </Callout>
 
 ### Example
