--- a/app/lp/(3-techincal-docs)/lp-api/requests/page.mdx
+++ b/app/lp/(3-techincal-docs)/lp-api/requests/page.mdx
@@ -774,7 +774,7 @@ Returns the transaction hash of the extrinsic that requested the redemption.
 Parameters:
 - [`redeem_address`](/lp/lp-api/types#addresses): The Ethereum address to send the redeemed funds to.
 - [`exact_amount`](/lp/lp-api/types#asset) (Optional): The amount of flip to redeem. If not specified, all $FLIP will be redeemed.
-- [`executor_address`](/lp/lp-api/types#addresses) (Optional): Restricts the `executeRedemption` function call in the [Gateway contract](../swapping-and-aggregation/evm-integration/statechain-gateway.mdx) to only be callable by the specified address for this redemption. If not specified, anyone can execute the redemption.
+- [`executor_address`](/lp/lp-api/types#addresses) (Optional): Restricts the `executeRedemption` function call in the [Gateway contract](/protocol/funding-state-chain-account#the-gateway) to only be callable by the specified address for this redemption. If not specified, anyone can execute the redemption.
 
 #### Example
 
