--- a/app/brokers/(3-techincal-docs)/javascript-sdk/page.mdx
+++ b/app/brokers/(3-techincal-docs)/javascript-sdk/page.mdx
@@ -28,6 +28,7 @@ Here are the functions provided by the Chainflip SDK:
     <Cards.Card title="getQuoteV2" href="/brokers/javascript-sdk/functions#getquotev2" />
     <Cards.Card title="requestDepositAddressV2" href="/brokers/javascript-sdk/functions#requestdepositaddressv2" />
     <Cards.Card title="encodeVaultSwapData" href="/brokers/javascript-sdk/functions#encodevaultswapdata" />
+    <Cards.Card title={<span className="badge-success after:content-['New']">encodeCfParameters</span>} href="/brokers/javascript-sdk/functions#encodecfparameters" />
     <Cards.Card title="getStatusV2" href="/brokers/javascript-sdk/functions#getstatusv2" />
     <Cards.Card title="getSwapLimits" href="/brokers/javascript-sdk/functions#getswaplimits" />
     <Cards.Card title="getBoostLiquidity" href="/brokers/javascript-sdk/functions#getboostliquidity" />
