--- a/app/brokers/(3-techincal-docs)/vault-swaps-api/bitcoin/page.mdx
+++ b/app/brokers/(3-techincal-docs)/vault-swaps-api/bitcoin/page.mdx
@@ -233,6 +233,6 @@ The swap parameters are encoded in the `nulldata UTXO` payload using [Parity's S
 | `affiliates` | List of up to 2 [affiliate short IDs](../../running-a-broker/broker-api/#broker_register_affiliate) and fee (basis points) | `Vec<(u8, u8)>`|
 
 <Callout type="info">
-The encoded data in `nulldata_payload` returned by [broker_request_swap_parameter_encoding](../../running-a-broker/broker-api#broker_request_swap_parameter_encoding) does not include any OP codes. Depending on how you build your transaction, you may need to add these manually. 
+The encoded data in `nulldata_payload` returned by [broker_request_swap_parameter_encoding](/brokers/broker-api/requests#broker_request_swap_parameter_encoding) does not include any OP codes. Depending on how you build your transaction, you may need to add these manually.
 First opcode must be `OP_RETURN` followed by either `OP_PUSHBYTES_X` (1..=75) or `OP_PUSHDATA1` (76).
 </Callout>
