feat: add docs for broker_decode_vault_swap_parameter

--- a/app/brokers/(3-techincal-docs)/broker-api/page.mdx
+++ b/app/brokers/(3-techincal-docs)/broker-api/page.mdx
@@ -35,6 +35,8 @@ Here are the RPCs useful for brokers that are available on Broker-API binary.
     <Cards.Card title="broker_withdraw_fees" href="/brokers/broker-api/requests#broker_withdraw_fees" />
     <Cards.Card title="broker_mark_transaction_for_rejection" href="/brokers/broker-api/requests#broker_mark_transaction_for_rejection" />
     <Cards.Card title="broker_request_swap_parameter_encoding" href="/brokers/broker-api/requests#broker_request_swap_parameter_encoding" />
+
+    <Cards.Card title={<span className="badge-success after:content-['New']">broker_decode_vault_swap_parameter</span>} href="/brokers/broker-api/requests#broker_decode_vault_swap_parameter" />
     <Cards.Card title={<span className="badge-success after:content-['New']">broker_encode_cf_parameters</span>} href="/brokers/broker-api/requests#broker_encode_cf_parameters" />
     <Cards.Card title="broker_open_private_btc_channel" href="/brokers/broker-api/requests#broker_open_private_btc_channel" />
     <Cards.Card title="broker_close_private_btc_channel" href="/brokers/broker-api/requests#broker_close_private_btc_channel" />
