--- a/app/lp/(3-techincal-docs)/lp-node-rpcs/subscriptions/page.mdx
+++ b/app/lp/(3-techincal-docs)/lp-node-rpcs/subscriptions/page.mdx
@@ -62,7 +62,7 @@ Subscribe:
    "params":{
       "base_asset":{
          "chain":"Ethereum",
-         "asset":"ETH"
+         "asset":"FLIP"
       },
       "quote_asset":{
          "chain":"Ethereum",
@@ -174,109 +174,6 @@ In practice a swap can be expected to appear in at least two websocket notificat
 Note that in the rare case of swaps failing (e.g. due to insufficient liquidity in the pool), they will be re-scheduled for
 the next block, and will appear again in the subscription.
 
-### `cf_subscribe_prewitness_swaps`<span className="badge-danger after:content-['Deprecated']"/>
-
-
-<Callout type="error">
-    THIS SUBSCRIPTION IS DEPRECATED. Use [cf_subscribe_scheduled_swaps](#cf_subscribe_scheduled_swaps) instead.
-</Callout>
-
-Subscribes to all *potential* incoming swaps of a particular direction. Swaps are only executed after a certain number of block confirmations for each chain, so this RPC allows you to see
-swaps that are *potential* but not yet confirmed. This is useful for liquidity providers to see what swaps are coming in and prepare for them.
-
-> [!WARNING]
->
-> Because these are witnessed *before* confirmation, they are not guaranteed to be executed *at all* or at that time, since blockchains can re-org.
-
-The current number of confirmations (where 0 confirmations is just in mempool and not in a block) required for each chain are:
-
-#### Mainnet (Berghain)
-
-| Chain      | Confirmations |
-|------------|---------------|
-| Bitcoin    | 2             |
-| Ethereum   | 3             |
-| Arbitrum   | 2             |
-| Polkadot   | Finalization  |
-| Solana     | Finalization  |
-
-
-#### Testnet (Perseverance)
-
-| Chain      | Confirmations |
-|------------|---------------|
-| Bitcoin    | 2             |
-| Ethereum   | 3             |
-| Arbitrum   | 2             |
-| Polkadot   | Finalization  |
-| Solana     | Finalization  |
-
-> For Bitcoin and Ethereum we use probabilistic finality, for Polkadot and Solana we use deterministic finality.
-
-Parameters:
-
-- `base_asset`: [Asset](lp-api#asset)
-- `quote_asset`: [Asset](lp-api#asset)
-- `side`: [Side](lp-api#side)
-
-Returns:
-
-- `block_hash`: string
-- `block_number`: number
-- `base_asset`: [Asset](lp-api#asset)
-- `quote_asset`: [Asset](lp-api#asset)
-- `side`: [Side](lp-api#side)
-- `amounts`: Array\<[Amount](lp-api#amount)\>
-
-
-
-#### Example
-
-Subscribe:
-```json copy
-{
-   "jsonrpc":"2.0",
-   "id":"1",
-   "method":"cf_subscribe_prewitness_swaps",
-   "params":{
-      "base_asset":{
-         "chain":"Bitcoin",
-         "asset":"BTC"
-      },
-      "quote_asset":{
-         "chain":"Ethereum",
-         "asset":"USDC"
-      },
-      "side":"buy"
-   }
-}
-```
-Notification:
-```json
-{
-   "jsonrpc":"2.0",
-   "method":"cf_subscribe_prewitness_swaps",
-   "params":{
-      "subscription":"KoWRLlMJ2CX1WxmY",
-      "result":{
-         "block_hash":"0x552e6b5daf12347375e5cea885c7398e1cbae1ad0cdbdd0a8e92c2b308c56141",
-         "block_number":4074,
-         "base_asset":{
-            "chain":"Bitcoin",
-            "asset":"BTC"
-         },
-         "quote_asset":{
-            "chain":"Ethereum",
-            "asset":"USDC"
-         },
-         "side":"buy",
-         "amounts":[
-            "0x989680"
-         ]
-      }
-   }
-}
-```
 ### `cf_subscribe_pool_price` <span className="badge-danger after:content-['Deprecated']"/>
 
 <Callout type="error">
